--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,16 @@
-name = "DiskDetection"
+name = "RingDetection"
 uuid = "72f87620-1546-45cd-8031-1f00e49166d6"
 authors = ["Riccardo Foffi <rfoffi@ethz.ch> and contributors"]
 version = "1.0.0-DEV"
+
+[deps]
+GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
+ImageEdgeDetection = "2b14c160-480b-11ea-1b58-656063328ff7"
+ImageFeatures = "92ff4b2b-8094-53d3-b29d-97f740f06cef"
+Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
+ParticleTracking = "682643da-b995-4346-8c6a-9b654bba8793"
+StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
+TiffImages = "731e570b-9d59-4bfa-96dc-6df516fadf69"
 
 [compat]
 julia = "1.10"
