--- a/Project.toml
+++ b/Project.toml
@@ -9,6 +9,7 @@ ImageEdgeDetection = "2b14c160-480b-11ea-1b58-656063328ff7"
 ImageFeatures = "92ff4b2b-8094-53d3-b29d-97f740f06cef"
 Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
 ParticleTracking = "682643da-b995-4346-8c6a-9b654bba8793"
+Requires = "ae029012-a4dd-5104-9daa-d747884805df"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 TiffImages = "731e570b-9d59-4bfa-96dc-6df516fadf69"
 
