--- a/Project.toml
+++ b/Project.toml
@@ -5,6 +5,7 @@ version = "1.0.0-DEV"
 
 [deps]
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
+GeometryBasics = "5c1252a2-5f33-56bf-86c9-59e7332b4326"
 ImageEdgeDetection = "2b14c160-480b-11ea-1b58-656063328ff7"
 ImageFeatures = "92ff4b2b-8094-53d3-b29d-97f740f06cef"
 Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
