--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "RingDetection"
 uuid = "72f87620-1546-45cd-8031-1f00e49166d6"
 authors = ["Riccardo Foffi <rfoffi@ethz.ch> and contributors"]
-version = "0.2.2"
+version = "0.2.3"
 
 [deps]
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
@@ -15,7 +15,16 @@ StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 TiffImages = "731e570b-9d59-4bfa-96dc-6df516fadf69"
 
 [compat]
-julia = "1.10"
+GLMakie = ">= 0.10"
+GeometryBasics = ">= 0.4"
+ImageEdgeDetection = ">= 0.1.8"
+ImageFeatures = ">= 0.5"
+Images = ">= 0.26"
+ParticleTracking = "^0.2.1"
+Requires = ">= 1.3"
+StatsBase = ">= 0.34"
+TiffImages = ">= 0.11"
+julia = "1.10 - 1.11"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
