--- a/Project.toml
+++ b/Project.toml
@@ -1,9 +1,10 @@
 name = "RingDetection"
 uuid = "72f87620-1546-45cd-8031-1f00e49166d6"
 authors = ["Riccardo Foffi <rfoffi@ethz.ch> and contributors"]
-version = "0.3.2"
+version = "0.4.0"
 
 [deps]
+GeometryBasics = "5c1252a2-5f33-56bf-86c9-59e7332b4326"
 ImageEdgeDetection = "2b14c160-480b-11ea-1b58-656063328ff7"
 ImageFeatures = "92ff4b2b-8094-53d3-b29d-97f740f06cef"
 Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
@@ -13,13 +14,14 @@ StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 TiffImages = "731e570b-9d59-4bfa-96dc-6df516fadf69"
 
 [compat]
-ImageEdgeDetection = ">= 0.1.8"
-ImageFeatures = ">= 0.5"
-Images = ">= 0.26"
+GeometryBasics = "0.4 - 0.5"
+ImageEdgeDetection = "0.1"
+ImageFeatures = "0.5"
+Images = "0.26"
 ParticleTracking = "^0.2.1"
-Requires = ">= 1.3"
-StatsBase = ">= 0.34"
-TiffImages = ">= 0.11"
+Requires = "1.3"
+StatsBase = "0.34"
+TiffImages = "0.11"
 julia = "1.10 - 1.11"
 
 [extras]
